--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.7",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "simple-git": "^3.22.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
