--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "archiver": "^6.0.1",
     "axios": "^1.6.7",
     "electron-squirrel-startup": "^1.0.0",
     "simple-git": "^3.22.0"
