--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "archiver": "^6.0.1",
     "axios": "^1.6.7",
     "electron-squirrel-startup": "^1.0.0",
+    "fs-extra": "^11.2.0",
     "simple-git": "^3.22.0"
   },
   "devDependencies": {
