--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zerocraft-sync",
-  "productName": "zerocraft-sync",
+  "productName": "Zerocraft Sync",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": "src/index.js",
@@ -21,6 +21,7 @@
     "archiver": "^6.0.1",
     "axios": "^1.6.7",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-updater": "^6.1.8",
     "fs-extra": "^11.2.0",
     "simple-git": "^3.22.0"
   },
@@ -32,5 +33,12 @@
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "electron": "28.2.2"
+  },
+  "build": {
+    "appId": "com.squirrel.programmingKyle.zerocraft-sync",
+    "productName": "Zerocraft Sync",
+    "win": {
+      "target": "nsis"
+    }
   }
 }
